# cmake_demo

./: .gitignore  CMakeLists.txt  README.md  pack.sh
example/: CMakeLists.txt  main.cpp
shared_lib/: CMakeLists.txt
shared_lib/include/: MyLog.h
shared_lib/src/: MyLog.cpp
src_lib/: CMakeLists.txt  Timestamp.hpp
static_lib/: CMakeLists.txt
static_lib/include/: MyMath.h
static_lib/src/: MyMath.cpp
